<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/productImage"
            android:layout_width="150dp"
            android:layout_height="230dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/productDescription"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:gravity="start"
            android:text="@string/product_description"
            app:layout_constraintBottom_toTopOf="@+id/count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.388" />

        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginBottom="64dp"
            android:text="@string/count"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/price"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toEndOf="@+id/guideline" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/price"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.714"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/productDescription"
            app:layout_constraintVertical_bias="0.2" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginEnd="4dp"
            android:src="@drawable/baseline_delete_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.493"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/productDescription"
            app:layout_constraintVertical_bias="0.912" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
